--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 any part of the memory for the next instruction.</p>
             <a class="link-button" target="_blank" href="https://www.youtube.com/">HIRE ME</a>
         </div>
-        <div class="half-width"><img src="Circle_Camel_Solid.svg(1).png" alt=""></div>
+        <div class="half-width"><img src="15006410.png" alt=""></div>
     </section>
 </body>
 
