--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
     </style>
 
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1><span class="Orange">my web</span> world!</h1>
