--- a/index.html
+++ b/index.html
@@ -34,6 +34,25 @@
         </div>
         <div class="half-width"><img src="15006410.png" alt=""></div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="Circle_Camel_Solid.svg(1).png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream big</h2>
+                <h2>become a web developer</h3>
+                    <p>Jump (JMP) instruction allows the programmer to skip sections of a program and branch to
+                        any part of the memory for the next instruction. Jump (JMP) instruction allows the programmer to
+                        skip
+                        sections of a program and branch to
+                        any part of the memory for the next instruction. Jump (JMP) instruction allows the programmer to
+                        skip
+                        sections of a program and branch to
+                        any part of the memory for the next instruction.</p>
+                    <a class="link-button " target="_blank" href="">DOWNLOAD RESUME</a>
+        </div>
+
+    </section>
 </body>
 
 </html>
