--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1><span class="Orange">my web</span> world!</h1>
@@ -34,7 +34,7 @@
         </div>
         <div class="half-width"><img src="15006410.png" alt=""></div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="Circle_Camel_Solid.svg(1).png" alt="">
         </div>
@@ -51,8 +51,33 @@
                         any part of the memory for the next instruction.</p>
                     <a class="link-button " target="_blank" href="">DOWNLOAD RESUME</a>
         </div>
-
     </section>
+    <section class="experiance-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="full-stack-experience" class="half-width shadow">
+                <h2>Full stack Web Developer</h2>
+                <h3 class="Orange">2022-present | pro Level Developer</h3>
+                <p>Jump (JMP) instruction allows the programmer to skip sections of a program and branch to
+                    any part of the memory for the next instruction. Jump (JMP) instruction allows the programmer to
+                    skip
+                    sections of a program and branch to
+                    any part of the memory for the next instruction.</p>
+            </div>
+            <div id="web-dev-experience" class="half-width shadow">
+                <h2>Baby Web Developer</h2>
+                <h3 class="Orange">2022-2024 | Hero Learner</h3>
+                <p>Jump (JMP) instruction allows the programmer to skip sections of a program and branch to
+                    any part of the memory for the next instruction. Jump (JMP) instruction allows the programmer to
+                    skip
+                    sections of a program and branch to
+                    any part of the memory for the next instruction.</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p> Me Me Me 2022, Learner</p>
+    </footer>
 </body>
 
 </html>
