--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1><span class="Orange">my web</span> world!</h1>
             <h3><u class="u1">Program Control Instructions</u>
             </h3>
-            <p>Jump (JMP) instruction allows the programmer to skip sections of a program and branch to
+            <p class="align">Jump (JMP) instruction allows the programmer to skip sections of a program and branch to
                 any part of the memory for the next instruction. Jump (JMP) instruction allows the programmer to skip
                 sections of a program and branch to
                 any part of the memory for the next instruction. Jump (JMP) instruction allows the programmer to skip
@@ -32,16 +32,17 @@
                 any part of the memory for the next instruction.</p>
             <a class="link-button" target="_blank" href="https://www.youtube.com/">HIRE ME</a>
         </div>
-        <div class="half-width"><img src="15006410.png" alt=""></div>
+        <div class="half-width padd1"><img src="15006410.png" alt=""></div>
     </section>
     <section class="dream-big flexible-container">
-        <div class="half-width">
+        <div class="half-width padd2">
             <img src="Circle_Camel_Solid.svg(1).png" alt="">
         </div>
         <div class="half-width">
             <h1>Dream big</h2>
                 <h3><u class="u1">become a web developer</u></h3>
-                <p>Jump (JMP) instruction allows the programmer to skip sections of a program and branch to
+                <p class="align">Jump (JMP) instruction allows the programmer to skip sections of a program and branch
+                    to
                     any part of the memory for the next instruction. Jump (JMP) instruction allows the programmer to
                     skip
                     sections of a program and branch to
@@ -58,7 +59,8 @@
             <div id="full-stack-experience" class="half-width shadow">
                 <h2>Full stack Web Developer</h2>
                 <h3 class="Orange"><u class="u2">2022-present | pro Level Developer</u></h3>
-                <p>Jump (JMP) instruction allows the programmer to skip sections of a program and branch to
+                <p class="align">Jump (JMP) instruction allows the programmer to skip sections of a program and branch
+                    to
                     any part of the memory for the next instruction. Jump (JMP) instruction allows the programmer to
                     skip
                     sections of a program and branch to
@@ -67,7 +69,8 @@
             <div id="web-dev-experience" class="half-width shadow">
                 <h2>Baby Web Developer</h2>
                 <h3 class="Orange"><u>2022-2024 | Hero Learner</u></h3>
-                <p>Jump (JMP) instruction allows the programmer to skip sections of a program and branch to
+                <p class="align">Jump (JMP) instruction allows the programmer to skip sections of a program and branch
+                    to
                     any part of the memory for the next instruction. Jump (JMP) instruction allows the programmer to
                     skip
                     sections of a program and branch to
